[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.198"
serde_derive = "1.0.198"
shellexpand = "3.1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.12"
