[package]
name = "acc"
version = "0.1.0"
authors = ["Amy Parker <amy@amyip.net>"]
edition = "2021"
rust-version = "1.74.1"
description = "Aggressive Circumvention of Censorship (ACC) client"
# homepage = TBC
repository = "https://github.com/amyipdev/acc"
# categories
# keywords

# if necessary, ios/android build features?
# platform build scripts (download/build wintun?)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colog = "1.3.0"
log = "0.4.21"
net-route = "0.4.2"
netdev = "0.25.0"
serde = "1.0.198"
serde_derive = "1.0.198"
shellexpand = "3.1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.12"
